bindings/swift/Sources/CRustPdf/include/pdf.h


typedef struct PdfDocument PdfDocument;
typedef struct PdfEditable PdfEditable;
const char *pdf_version(void);
const char *pdf_last_error_message(void);
int pdf_activate_license(const char *token);
PdfDocument *pdf_document_new(void);
void pdf_document_free(PdfDocument *doc);
int pdf_document_add_page(PdfDocument *doc);
int pdf_page_set_fill_rgb(PdfDocument *doc, double r, double g, double b);
int pdf_page_set_stroke_rgb(PdfDocument *doc, double r, double g, double b);
int pdf_page_set_line_width(PdfDocument *doc, double width);
int pdf_page_rect(PdfDocument *doc, double x, double y, double width, double height);
int pdf_page_fill(PdfDocument *doc);
int pdf_page_stroke(PdfDocument *doc);
int pdf_document_save(PdfDocument *doc, const char *path);
int pdf_document_write(PdfDocument *doc, unsigned char **out_ptr, uintptr_t *out_len);
void pdf_buffer_free(unsigned char *ptr, uintptr_t len);
int pdf_document_page_count(const PdfDocument *doc);
int pdf_document_pdfa(PdfDocument *doc);
int pdf_document_pdfa_level(PdfDocument *doc, int level);
int pdf_document_tagged(PdfDocument *doc);
int pdf_document_set_version(PdfDocument *doc, int v);
int pdf_document_set_default_size(PdfDocument *doc, double width, double height);
int pdf_document_set_info(PdfDocument *doc,
                                const char *title,
                                const char *author,
                                const char *subject,
                                const char *keywords,
                                const char *creator);
int pdf_document_add_page_sized(PdfDocument *doc, double width, double height);
int pdf_document_add_font_file(PdfDocument *doc, const char *path, int *out_id);
int pdf_document_add_font(PdfDocument *doc, const uint8_t *data, uintptr_t len, int *out_id);
int pdf_page_show_text(PdfDocument *doc,
                             int font,
                             double size,
                             double x,
                             double y,
                             const char *text,
                             int heading_level);
int pdf_page_paragraph(PdfDocument *doc,
                             int font,
                             double size,
                             double x,
                             double y,
                             double width,
                             int align,
                             const char *text);
int pdf_document_add_image_file(PdfDocument *doc, const char *path, int *out_id);
int pdf_document_add_image_png(PdfDocument *doc,
                                     const uint8_t *data,
                                     uintptr_t len,
                                     int *out_id);
int pdf_document_add_image_jpeg(PdfDocument *doc,
                                      const uint8_t *data,
                                      uintptr_t len,
                                      int *out_id);
int pdf_page_draw_image(PdfDocument *doc, int image, double x, double y, double w, double h);
int pdf_page_figure(PdfDocument *doc,
                          int image,
                          double x,
                          double y,
                          double w,
                          double h,
                          const char *alt);
int pdf_document_attach_file(PdfDocument *doc,
                                   const char *name,
                                   const char *mime,
                                   const uint8_t *data,
                                   uintptr_t len,
                                   int relationship,
                                   const char *desc);
int pdf_document_text_field(PdfDocument *doc,
                                  const char *name,
                                  uintptr_t page,
                                  double x0,
                                  double y0,
                                  double x1,
                                  double y1,
                                  const char *value,
                                  double size);
int pdf_document_checkbox(PdfDocument *doc,
                                const char *name,
                                uintptr_t page,
                                double x0,
                                double y0,
                                double x1,
                                double y1,
                                int checked);
int pdf_document_dropdown(PdfDocument *doc,
                                const char *name,
                                uintptr_t page,
                                double x0,
                                double y0,
                                double x1,
                                double y1,
                                const char *options,
                                int selected,
                                double size);
int pdf_document_radio_group(PdfDocument *doc,
                                   const char *name,
                                   uintptr_t page,
                                   uintptr_t count,
                                   const double *rects,
                                   const char *const *exports,
                                   int selected);
PdfEditable *pdf_editable_load(const uint8_t *data, uintptr_t len);
PdfEditable *pdf_editable_load_password(const uint8_t *data, uintptr_t len, const char *password);
void pdf_editable_free(PdfEditable *ed);
int pdf_editable_page_count(const PdfEditable *ed);
int pdf_editable_merge(PdfEditable *ed, const PdfEditable *other);
int pdf_editable_rotate_page(PdfEditable *ed, uintptr_t index, int degrees);
int pdf_editable_delete_page(PdfEditable *ed, uintptr_t index);
int pdf_editable_reorder_pages(PdfEditable *ed, const uintptr_t *order, uintptr_t count);
int pdf_editable_extract_pages(const PdfEditable *ed,
                                     const uintptr_t *indices,
                                     uintptr_t count,
                                     PdfEditable **out);
int pdf_editable_set_info(PdfEditable *ed, const char *key, const char *value);
int pdf_editable_get_info(const PdfEditable *ed,
                                const char *key,
                                unsigned char **out_ptr,
                                uintptr_t *out_len);
int pdf_editable_set_xmp(PdfEditable *ed, const uint8_t *xml, uintptr_t len);
int pdf_editable_overlay_page(PdfEditable *ed,
                                    uintptr_t index,
                                    const uint8_t *content,
                                    uintptr_t len);
int pdf_editable_fill_text_field(PdfEditable *ed,
                                       const char *name,
                                       const char *value,
                                       int *out_found);
int pdf_editable_optimize(PdfEditable *ed);
int pdf_editable_compact(PdfEditable *ed, int on);
int pdf_editable_encrypt(PdfEditable *ed,
                               int method,
                               const char *user,
                               const char *owner,
                               int read_only);
int pdf_editable_to_bytes(const PdfEditable *ed, unsigned char **out_ptr, uintptr_t *out_len);
int pdf_editable_to_bytes_incremental(const PdfEditable *ed,
                                            const uint8_t *original,
                                            uintptr_t original_len,
                                            unsigned char **out_ptr,
                                            uintptr_t *out_len);
int pdf_editable_save(const PdfEditable *ed, const char *path);
int pdf_extract_text(const uint8_t *data,
                           uintptr_t len,
                           unsigned char **out_ptr,
                           uintptr_t *out_len);
int pdf_extract_images_to_dir(const uint8_t *data,
                                    uintptr_t len,
                                    const char *dir,
                                    uintptr_t *out_count);
int pdf_render_page_to_png(const uint8_t *data,
                                 uintptr_t len,
                                 uintptr_t page_index,
                                 double dpi,
                                 unsigned char **out_ptr,
                                 uintptr_t *out_len);
int pdf_page_count(const uint8_t *data, uintptr_t len, uintptr_t *out_count);
int pdf_sign(const uint8_t *pdf,
                   uintptr_t pdf_len,
                   const uint8_t *key_der,
                   uintptr_t key_len,
                   const uint8_t *cert_der,
                   uintptr_t cert_len,
                   const char *reason,
                   const char *location,
                   const char *name,
                   int pades,
                   unsigned char **out_ptr,
                   uintptr_t *out_len);
int pdf_timestamp(const uint8_t *pdf,
                        uintptr_t pdf_len,
                        const uint8_t *key_der,
                        uintptr_t key_len,
                        const uint8_t *cert_der,
                        uintptr_t cert_len,
                        const char *date,
                        unsigned char **out_ptr,
                        uintptr_t *out_len);